<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sharedCardsListFragment"
        android:title="@string/shared_lists_title"
        android:checked="true"
        android:icon="@drawable/ic_shared_lists"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item android:id="@+id/myCardsListFragment"
        android:title="@string/my_lists_title"
        android:checked="true"
        android:icon="@drawable/ic_my_lists"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/updateProfileFragment"
        android:title="@string/profile_title"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="3"
        app:showAsAction="never" />
</menu>